clusterpub/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Use AWS ALB
    ingressClassName: alb
spec:
  rules:
    - http:
        paths:
          - path: /api/record
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
